small style change

--- a/common.css
+++ b/common.css
@@ -61,7 +61,7 @@
 }
 
 .navbar a {
-  color: #333;
+  color: #0c5b91;
   text-decoration: none;
   font-weight: 500;
   transition: color 0.3s ease-in-out;
